"C" channel of RGB Curves node is ineffective at input values > 1.0 #38606

Closed
opened 2014-02-11 22:47:06 +01:00 by Sam Brubaker · 10 comments

Version: 2.69 official (win 64)

How to reproduce: Render the scene (just a sphere with a very bright lamp) and inspect the composite node tree. With the "C" curve completely inverted, the expected output of the RGB Curves node should be a complete inversion of the input, but it isn't. Also try flattening the curve at 0.0, which should make the whole frame dark, but this also does not work.

Comparing the render result to the composite, It seems to only subtract 1.0 from values greater than 1.0, no matter how low the curve is. Changing the extrapolation of the curve has no effect.

The individual RGB channels do seem to work as expected on values > 1.0, so perhaps this is not a bug and I'm just misunderstanding the purpose of the C channel? I don't know why I would want it to work the way it currently does, though.

RGB_Curves_Bug.blend

Version: 2.69 official (win 64) How to reproduce: Render the scene (just a sphere with a very bright lamp) and inspect the composite node tree. With the "C" curve completely inverted, the expected output of the RGB Curves node should be a complete inversion of the input, but it isn't. Also try flattening the curve at 0.0, which should make the whole frame dark, but this also does not work. Comparing the render result to the composite, It seems to only subtract 1.0 from values greater than 1.0, no matter how low the curve is. Changing the extrapolation of the curve has no effect. The individual RGB channels *do* seem to work as expected on values > 1.0, so perhaps this is not a bug and I'm just misunderstanding the purpose of the C channel? I don't know why I would want it to work the way it currently does, though. [RGB_Curves_Bug.blend](https://archive.blender.org/developer/F76957/RGB_Curves_Bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

Added subscriber: @brad_h

Added subscriber: @brad_h
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

What happens here is that the color of the image goes beyond the 1.0 white level. The behavior of the curve mapping atm is such that it will extrapolate the mapping for any colors above the white level (or below black level for that matter) with the default 1:1 identity curve, offset by the white/black level.

This doesn't seem to be a bug per-se, it's just that you need to adjust your white level to the excessive level in the input image. Alternatively you can try to normalize the image first, or perhaps better use an invert node instead which doesn't clamp the range to black/white levels.

What happens here is that the color of the image goes beyond the 1.0 white level. The behavior of the curve mapping atm is such that it will extrapolate the mapping for any colors above the white level (or below black level for that matter) with the default 1:1 identity curve, offset by the white/black level. This doesn't seem to be a bug per-se, it's just that you need to adjust your white level to the excessive level in the input image. Alternatively you can try to normalize the image first, or perhaps better use an invert node instead which doesn't clamp the range to black/white levels.
Brecht Van Lommel self-assigned this 2014-02-14 16:02:40 +01:00

I think this is a bug, it's in the "premultiply" system here where it multiplies the C curve table with the R/G/B curve tables as an optimization, but doesn't adjust the extrapolation values ext_in and ext_out. I'll fix it.

I think this is a bug, it's in the "premultiply" system here where it multiplies the C curve table with the R/G/B curve tables as an optimization, but doesn't adjust the extrapolation values ext_in and ext_out. I'll fix it.

This issue was referenced by blender/blender-addons-contrib@42946c37c7

This issue was referenced by blender/blender-addons-contrib@42946c37c789b5a57c45ff2637c79d194beb33d0

This issue was referenced by 42946c37c7

This issue was referenced by 42946c37c789b5a57c45ff2637c79d194beb33d0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 42946c37c7.

Closed by commit 42946c37c7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38606
No description provided.