Fix T38606: C curve in the curve mapping compositing node not extrapolating correct.

The "premultiply" optimization here did not take the extrapolation into account.